update index css

--- a/index.html
+++ b/index.html
@@ -97,28 +97,28 @@
         <ul class="team-list">
           <li class="team-item">
             <img class="team-photo" src="./images/mark.jpg" alt="Mark Guerrero" width="264" height="260" />
-            <div class="list-item-text">
+            <div class="team-item-text">
               <h3 class="team-name">Mark Guerrero</h3>
               <p class="team-position">Product Designer</p>
             </div>
           </li>
           <li class="team-item">
             <img class="team-photo" src="./images/tom.jpg" alt="Tom Ford" width="264" height="260" />
-            <div class="list-item-text">
+            <div class="team-item-text">
               <h3 class="team-name">Tom Ford</h3>
               <p class="team-position">Frontend Developer</p>
             </div>
           </li>
           <li class="team-item">
             <img class="team-photo" src="./images/camila.jpg" alt="Camila Garcia" width="264" height="260" />
-            <div class="list-item-text">
+            <div class="team-item-text">
               <h3 class="team-name">Camila Garcia</h3>
               <p class="team-position">Marketing</p>
             </div>
           </li>
           <li class="team-item">
             <img class="team-photo" src="./images/daniel.jpg" alt="Daniel Wilson" width="264" height="260" />
-            <div class="list-item-text">
+            <div class="team-item-text">
               <h3 class="team-name">Daniel Wilson</h3>
               <p class="team-position">UI Designer</p>
             </div>
@@ -135,28 +135,28 @@
         <ul class="portfolio-list">
           <li class="portfolio-item">
             <img class="portfolio-image" src="./images/banking.jpg" alt="Banking App" width="360" height="300">
-            <div class="list-item-text portfolio-item-border">
+            <div class="portfolio-item-text portfolio-item-border">
               <h3 class="portfolio-item-title">Banking App</h3>
               <p class="portfolio-item-direction">App</p>
             </div>
           </li>
           <li class="portfolio-item">
             <img class="portfolio-image" src="./images/cashless.jpg" alt="Cashless Payment" width="360" height="300">
-            <div class="list-item-text portfolio-item-border">
+            <div class="portfolio-item-text portfolio-item-border">
               <h3 class="portfolio-item-title">Cashless Payment</h3>
               <p class="portfolio-item-direction">Marketing</p>
             </div>
           </li>
           <li class="portfolio-item">
             <img class="portfolio-image" src="./images/meditation.jpg" alt="Meditation App" width="360" height="300">
-            <div class="list-item-text portfolio-item-border">
+            <div class="portfolio-item-text portfolio-item-border">
               <h3 class="portfolio-item-title">Meditation App</h3>
               <p class="portfolio-item-direction">App</p>
             </div>
           </li>
           <li class="portfolio-item">
             <img class="portfolio-image" src="./images/taxi.jpg" alt="Taxi Service" width="360" height="300">
-            <div class="list-item-text portfolio-item-border">
+            <div class="portfolio-item-text portfolio-item-border">
               <h3 class="portfolio-item-title">Taxi Service</h3>
               <p class="portfolio-item-direction">Marketing</p>
             </div>
@@ -164,14 +164,14 @@
           <li class="portfolio-item">
             <img class="portfolio-image" src="./images/illustrations.jpg" alt="Screen Illustrations" width="360"
               height="300">
-            <div class="list-item-text portfolio-item-border">
+            <div class="portfolio-item-text portfolio-item-border">
               <h3 class="portfolio-item-title">Screen Illustrations</h3>
               <p class="portfolio-item-direction">Design</p>
             </div>
           </li>
           <li class="portfolio-item">
             <img class="portfolio-image" src="./images/courses.jpg" alt="Online Courses" width="360" height="300">
-            <div class="list-item-text portfolio-item-border">
+            <div class="portfolio-item-text portfolio-item-border">
               <h3 class="portfolio-item-title">Online Courses</h3>
               <p class="portfolio-item-direction">Marketing</p>
             </div>
